<package>
  <name>roslisp</name>
  <version>1.9.24</version>
  <description>Lisp client library for ROS, the Robot Operating System.</description>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <license>BSD</license>

  <author>Bhaskara Marthi</author>
  <author>Brian Gerkey</author>
  <author email="moesenle@cs.tum.edu">Lorenz Moesenlechner</author>
  <author>Thibault Kruse</author>

  <url>http://ros.org/wiki/roslisp</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roslang</run_depend>
  <run_depend>sbcl</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>ros_environment</run_depend>

  <export>
    <roslang cmake="${prefix}/rosbuild/roslisp.cmake"/>
  </export>
</package>
